--- a/Backend/fluent-bit/config/input.conf
+++ b/Backend/fluent-bit/config/input.conf
@@ -2,35 +2,6 @@
     Name   tcp
     Listen 0.0.0.0
     Port   5170
-    Tag    fortinet
-
-[INPUT]
-    Name   tcp
-    Listen 0.0.0.0
-    Port   5171
-    Tag    cisco
-
-[INPUT]
-    Name   tcp
-    Listen 0.0.0.0
-    Port   5172
-    Tag    paloalto
-
-[INPUT]
-    Name   tcp
-    Listen 0.0.0.0
-    Port   5173
-    Tag    f5
-
-[INPUT]
-    Name   tcp
-    Listen 0.0.0.0
-    Port   5174
-    Tag    checkpoint
-
-[INPUT]
-    Name   tcp
-    Listen 0.0.0.0
-    Port   5175
-    Tag    broadcom
+    Tag    syslog
+    Format json
 
