--- a/Backend/fluent-bit/config/output.conf
+++ b/Backend/fluent-bit/config/output.conf
@@ -4,8 +4,16 @@
     Host  api
     Port  8000
     URI   /api/v1/logs
-    Format json
+    Format json_lines
     Json_date_key timestamp
     Json_date_format iso8601
     Retry_Limit 5
+    net.keepalive On
+    net.keepalive_idle_timeout 30
+    Tls Off
+    Header Content-Type application/json
+
+[OUTPUT]
+    Name  stdout
+    Match *
 
