--- a/Backend/fluent-bit/config/parsers.conf
+++ b/Backend/fluent-bit/config/parsers.conf
@@ -1,35 +1,12 @@
 [PARSER]
-    Name        fortinet
-    Format      json
-    Time_Key    timestamp
+    Name        syslog-parser
+    Format      regex
+    Regex       ^<(?<pri>[0-9]+)>(?<time>[^ ]*) (?<host>[^ ]*) (?<ident>[a-zA-Z0-9_\/\.\-]*)(?:\[(?<pid>[0-9]+)\])?(?:[^\:]*\:)? *(?<log>.*)$
+    Time_Key    time
     Time_Format %Y-%m-%dT%H:%M:%S.%L
 
 [PARSER]
-    Name        cisco
-    Format      json
-    Time_Key    timestamp
-    Time_Format %Y-%m-%dT%H:%M:%S.%L
-
-[PARSER]
-    Name        paloalto
-    Format      json
-    Time_Key    timestamp
-    Time_Format %Y-%m-%dT%H:%M:%S.%L
-
-[PARSER]
-    Name        f5
-    Format      json
-    Time_Key    timestamp
-    Time_Format %Y-%m-%dT%H:%M:%S.%L
-
-[PARSER]
-    Name        checkpoint
-    Format      json
-    Time_Key    timestamp
-    Time_Format %Y-%m-%dT%H:%M:%S.%L
-
-[PARSER]
-    Name        broadcom
+    Name        json-parser
     Format      json
     Time_Key    timestamp
     Time_Format %Y-%m-%dT%H:%M:%S.%L
