--- a/Backend/rsyslog/config/00-main-config.conf
+++ b/Backend/rsyslog/config/00-main-config.conf
@@ -13,54 +13,24 @@ module(load="omfwd")
 $DebugLevel 2
 $DebugFile /var/log/rsyslog/rsyslog-debug.log
 
-# Configure TCP inputs for various vendors
-input(type="imtcp" port="5014" ruleset="fortinet")
-input(type="imtcp" port="5015" ruleset="cisco")
-input(type="imtcp" port="5016" ruleset="paloalto")
-input(type="imtcp" port="5017" ruleset="f5")
-input(type="imtcp" port="5018" ruleset="checkpoint")
-input(type="imtcp" port="5019" ruleset="broadcom")
+# Log all messages to a file for debugging
+*.* action(type="omfile" file="/var/log/rsyslog/all_messages.log")
 
-# JSON Template
-template(name="JsonFormat" type="list") {
-  property(name="timereported" dateFormat="rfc3339" format="jsonf" outname="timestamp")
-  property(name="hostname" format="jsonf" outname="host")
-  property(name="syslogtag" format="jsonf" outname="syslog_tag")
-  property(name="msg" format="jsonf" outname="message")
-  constant(value="\n")
-}
+# Configure TCP inputs for various devices
+input(type="imtcp" port="5014" ruleset="forward_to_fluentbit")
+input(type="imtcp" port="5015" ruleset="forward_to_fluentbit")
+input(type="imtcp" port="5016" ruleset="forward_to_fluentbit")
+input(type="imtcp" port="5017" ruleset="forward_to_fluentbit")
 
-# Rulesets for various vendors
-ruleset(name="fortinet") {
-  action(type="omfile" file="/var/log/rsyslog/fortinet.log" template="JsonFormat")
-  action(type="omfwd" target="fluent-bit" port="5170" protocol="tcp" template="JsonFormat" action.resumeRetryCount="-1" action.resumeInterval="30")
-}
+# Template for forwarding
+template(name="forward_template" type="string" string="%msg%\n")
 
-ruleset(name="cisco") {
-  action(type="omfile" file="/var/log/rsyslog/cisco.log" template="JsonFormat")
-  action(type="omfwd" target="fluent-bit" port="5171" protocol="tcp" template="JsonFormat" action.resumeRetryCount="-1" action.resumeInterval="30")
-}
-
-ruleset(name="paloalto") {
-  action(type="omfile" file="/var/log/rsyslog/paloalto.log" template="JsonFormat")
-  action(type="omfwd" target="fluent-bit" port="5172" protocol="tcp" template="JsonFormat" action.resumeRetryCount="-1" action.resumeInterval="30")
-}
-
-ruleset(name="f5") {
-  action(type="omfile" file="/var/log/rsyslog/f5.log" template="JsonFormat")
-  action(type="omfwd" target="fluent-bit" port="5173" protocol="tcp" template="JsonFormat" action.resumeRetryCount="-1" action.resumeInterval="30")
-}
-
-ruleset(name="checkpoint") {
-  action(type="omfile" file="/var/log/rsyslog/checkpoint.log" template="JsonFormat")
-  action(type="omfwd" target="fluent-bit" port="5174" protocol="tcp" template="JsonFormat" action.resumeRetryCount="-1" action.resumeInterval="30")
-}
-
-ruleset(name="broadcom") {
-  action(type="omfile" file="/var/log/rsyslog/broadcom.log" template="JsonFormat")
-  action(type="omfwd" target="fluent-bit" port="5175" protocol="tcp" template="JsonFormat" action.resumeRetryCount="-1" action.resumeInterval="30")
+# Ruleset for forwarding to Fluent Bit
+ruleset(name="forward_to_fluentbit") {
+    action(type="omfwd" target="fluent-bit" port="5170" protocol="tcp" template="forward_template")
+    action(type="omfile" file="/var/log/rsyslog/forwarded_messages.log" template="forward_template")
 }
 
 # Default action for unmatched messages
-*.* action(type="omfile" file="/var/log/rsyslog/all.log" template="JsonFormat")
+*.* action(type="omfile" file="/var/log/rsyslog/unmatched_messages.log")
 
