--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -19,52 +19,45 @@ services:
       - POSTGRES_PORT=5432
       - PYTHONUNBUFFERED=1
       - LOG_LEVEL=DEBUG
-      - JWT_SECRET_KEY=H8md0llah2025
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - log_network
+    restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
-      retries: 5
+      retries: 3
+      start_period: 20s
 
-  test-client:
+  frontend_next:
+    container_name: frontend_next
     build:
-      context: .
-      dockerfile: Backend/Dockerfile
-    depends_on:
-      - rsyslog
-    networks:
-      - log_network
+      context: ./Frontendnextjs
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
     environment:
-      - RSYSLOG_HOST=rsyslog
-      - RSYSLOG_PORT=5014
-    command: python /app/Backend/generate_logs.py
-
-  rsyslog:
-    build:
-      context: ./Backend/rsyslog
-      dockerfile: Dockerfile
-    ports:
-      - "5014-5017:5014-5017"
+      - NEXT_PUBLIC_API_URL=http://api:8000
+      - NODE_ENV=production
+      - NEXT_TELEMETRY_DISABLED=1
     volumes:
-      - rsyslog_logs:/var/log/rsyslog
-    networks:
-      - log_network
-
-  fluent-bit:
-    build:
-      context: ./Backend/fluent-bit
-      dockerfile: Dockerfile
-    ports:
-      - "5170:5170"
+      - ./Frontendnextjs:/app
+      - /app/node_modules
+      - /app/.next
     depends_on:
       api:
         condition: service_healthy
     networks:
       - log_network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   db:
     image: postgres:13
@@ -76,6 +69,55 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - log_network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U loguser -d logdb"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  rsyslog:
+    build:
+      context: ./Backend/rsyslog
+      dockerfile: Dockerfile
+    volumes:
+      - rsyslog_logs:/var/log/rsyslog
+      - ./Backend/rsyslog/config:/etc/rsyslog.d
+      - ./Backend/rsyslog/scripts:/app/rsyslog/scripts
+    ports:
+      - "514:514/udp"
+      - "5014:5014/tcp"
+    environment:
+      - TZ=UTC
+      - RSYSLOG_CONFIG_DIR=/etc/rsyslog.d
+      - LOG_LEVEL=DEBUG
+    networks:
+      - log_network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "ps aux | grep rsyslogd || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  test-client:
+    image: alpine
+    command: sh -c 'while true; do logger -n fluent-bit -P 5140 -t TestClient -p local0.info "Test log message from Alpine client"; echo "Sent log message"; sleep 5; done'
+    depends_on:
+      - fluent-bit
+    networks:
+      - log_network
+    restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    healthcheck:
+      test: ["CMD", "ps", "aux", "|", "grep", "logger"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 networks:
   log_network:
