--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,50 +1,80 @@
-asn1crypto==1.5.1
-black==23.11.0
-blinker==1.9.0
-click==8.1.8
-flake8==6.1.0
-Flask==2.3.3
-Flask-JWT-Extended==4.5.2
-Flask-SQLAlchemy==3.0.5
-flask-swagger-ui==4.11.1
-gunicorn==21.2.0
-iniconfig==2.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.5
-MarkupSafe==3.0.2
-marshmallow==3.20.1
-mccabe==0.7.0
-mypy==1.7.0
-mypy-extensions==1.0.0
-packaging==24.2
-pathspec==0.12.1
-pg8000==1.29.4
-platformdirs==4.3.6
-pluggy==1.5.0
-psycopg2-binary==2.9.10
-pycodestyle==2.11.1
-pyflakes==3.1.0
-PyJWT==2.8.0
-pytest==7.4.3
-pytest-mock==3.14.0
-pytest-timeout==2.1.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
-redis==5.0.1
-scramp==1.4.5
-six==1.17.0
-SQLAlchemy==2.0.25
-typing_extensions==4.12.2
-Werkzeug==3.1.3
-fastapi==0.95.0
-uvicorn==0.20.0
-pydantic==1.10.7
+# FastAPI and ASGI server
+fastapi==0.68.0
+uvicorn==0.15.0
+
+# Database
+sqlalchemy==1.4.25
+psycopg2-binary==2.9.1
+alembic==1.7.3
+
+# Authentication and security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-aiofiles==23.2.1
-httpx==0.24.1
-python-multipart==0.0.6
-bcrypt==4.0.1
-slowapi==0.1.8
-alembic[tz]
+bcrypt==3.2.0
+python-multipart==0.0.5
+msal==1.16.0
+
+# Environment variables
+python-dotenv==0.19.0
+
+# LDAP and Active Directory
+python-ldap==3.4.3
+ldap3==2.9.1
+
+# OAuth and OpenID Connect (for SSO)
+authlib==1.0.1
+httpx==0.23.0
+
+# HTTP requests
+requests==2.26.0
+
+# Data validation and settings management
+pydantic[email]==1.8.2
+
+# Date parsing
+python-dateutil==2.8.2
+
+# Logging
+loguru==0.5.3
+
+# Testing
+pytest==6.2.5
+pytest-asyncio==0.15.1
+pytest-timeout==2.1.0
+
+# Code formatting and linting
+black==21.9b0
+flake8==3.9.2
+isort==5.9.3
+
+# Performance monitoring
+sentry-sdk==1.4.3
+
+# Caching
+redis==3.5.3
+
+# Async database support
+databases[postgresql]==0.5.3
+asyncpg==0.24.0
+
+# Task queue
+celery==5.2.7
+
+# Serialization
+msgpack==1.0.2
+
+# Compression
+python-snappy==0.6.0
+
+# XML parsing (if needed)
+lxml==4.6.3
+
+# YAML parsing (if needed)
+pyyaml==5.4.1
+
+# JSON Web Token
+pyjwt==2.1.0
+
+# Cryptography
+cryptography==3.4.8
 
