--- a/frontendnextjs/package.json
+++ b/frontendnextjs/package.json
@@ -3,33 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_ENV=development node server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
-    "lint": "next lint",
-    "logs": "tail -f server.log"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-label": "^2.0.0",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.4",
+    "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.18.0",
+    "lucide-react": "^0.309.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "framer-motion": "^10.18.0",
-    "next-themes": "^0.2.1",
-    "axios": "^1.4.0",
-    "react-chartjs-2": "^5.2.0",
-    "chart.js": "^4.3.0",
-    "lucide-react": "^0.309.0"
+    "react-hook-form": "^7.49.2",
+    "tailwind-merge": "^2.0.0",
+    "use-debounce": "^9.0.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.19",
     "postcss": "8.4.27",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19"
+    "typescript": "5.1.6"
   }
 }
 
